2009-05-27  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* MediaElement.cs:
	* Image.cs: Create a ExceptionRoutedEventArgs with default/TODO
	  values, prevents a lot of the MS tests from throwing NRE and
	  timing out.

2009-05-27  Alan McGovern  <amcgovern@novell.com>

	* Control.cs: Control.Enabled needs to be created in native
	  code as it's required for hittesting. A disabled control and
	  its visual children do not receive mouse events and are not
	  visible to VisualTreeHelper.FindElementInHostCoordinates.

2009-05-26  Alan McGovern  <amcgovern@novell.com>

	* TextBox.cs: Add missing VisualState transitions to TextBox.

2009-05-22  Alan McGovern  <amcgovern@novell.com>

	* ComboBox.cs
	* ContentPresenter.cs
	* Control.cs
	* ItemsControl.cs
	* StackPanel.cs:
	Use DependencyProperty.RegisterCore for these DPs.

2009-05-21  Jackson Harper  <jackson@ximian.com>

	* ComboBox.cs: Cleanup debug spew so it doesn't cause a crash when
	non FrameworkElement objects are added to the combo box.

2009-05-21  Alan McGovern  <amcgovern@novell.com>

	* ItemsControl.cs: Add the required VisualState changes to
	PasswordBox.
	
2009-05-21  Alan McGovern  <amcgovern@novell.com>

	* ItemsControl.cs: InvokeItemsChanged shouldn't be virtual.
	
2009-05-18  Larry Ewing  <lewing@novell.com>

	* StackPanel.cs: take max/min into account in layout.

2009-05-18  Alan McGovern  <amcgovern@novell.com>

	* ContentPresenter.cs: For contentcontrols, the applied
	  template is only cleared if the old or new content is a
	  UIElement (frameworkelement?). The fallback 'template' of a
	  Grid + TextBlock is also reused every time.

2009-05-18  Alan McGovern  <amcgovern@novell.com>

	* ItemsControl.cs: Cosmetic - Remove some C.W.Ls

2009-05-15  Alan McGovern  <amcgovern@novell.com>

	* RowDefinition.cs:
	* ColumnDefinition.cs: These should both be sealed.

2009-05-13  Alan McGovern  <amcgovern@novell.com>

	* ItemsControl.cs: When the items collection is databound, we